# labs

./: .gitignore  defs.h
HelloMSVC/: .clang-format  .gitignore  HelloMSVC.sln  README.txt
HelloMSVC/HelloMSVC/: HelloMSVC.vcxproj
HelloMSVC/HelloMSVC/src/: Entity.cpp  Entity.h  Logger.cpp  Logger.h  Player.cpp  Player.h  Position.cpp  Position.h  Vectex.cpp  Vertex.h  main.cpp
c/: .clang-format  .gitignore  README.txt
c/cl/: Makefile
c/gl/: README.txt  meson.build
c/gl/src/: main.c  program.h  shader.c  shader.h
c/gles/: CMakePresets.json
c/gles/src/: main.c
c/graphics/: README.txt  meson.build
c/graphics/src/: defs.h  font.c  font.h  main.c  program.h  shader.c  shader.h  vertices.h
c/gui/: README.txt  meson.build
c/gui/src/: main.c
c/os/: boot.asm
c/tui/: README.txt  meson.build
c/tui/src/: main.c
c/vk/: cmd.h  ctx.h  mem.h  pdev.h  ppl.c  ppl.h
c/x86_64/: Makefile  hello.S
cl/: example.c
cpp/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
cpp/cute/: meson.build
cpp/cute/src/: main.cpp  widget.h
cpp/emu/: Makefile
cpp/gles/: CMakeLists.txt
cpp/gles/src/: font.c
cpp/src/: app.cpp  app.h  defs.h  frame.cpp  frame.h
cpp/vk/: ctx.c  desc.c  desc.h  fence.h  ldev.h  main.c  shader.comp
cs/: .editorconfig  README.txt  xui.sln
cs/Common/: Constants.cs
cs/Desktop/: App.axaml  App.axaml.cs  Desktop.csproj  Program.cs  ViewLocator.cs  app.manifest
cs/Desktop/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
cs/Desktop/Views/: MainWindow.axaml  MainWindow.axaml.cs
cs/Mobile/: App.xaml  App.xaml.cs  AppShell.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  Mobile.csproj
emu/: main.c
gles/src/: font.h
go/: go.mod  go.sum  main.go
go/db/: mysql.go
go/logger/: logger.go
go/tui/: model.go  style.go  tab.go  tui.go
java/: README.txt  pom.xml
java/gui/: README.txt  pom.xml
java/gui/src/main/java/: module-info.java
java/gui/src/main/java/com/example/: App.java
java/native/: README.txt  pom.xml
kt/: settings.gradle.kts
kt/composeApp/: build.gradle.kts
kt/composeApp/src/androidMain/kotlin/com/koki/morino/: MainActivity.kt
kt/composeApp/src/androidMain/res/values/: strings.xml
kt/composeApp/src/commonMain/kotlin/: App.kt
kt/composeApp/src/desktopMain/kotlin/: main.kt
kt/gradle/: libs.versions.toml
os/: boot.asm
rs/: .gitignore  Cargo.toml  README.txt
rs/crates/mybgp/: Cargo.toml
rs/mygpu/: Cargo.toml  README.txt  index.html
rs/mygpu/shaders/: texture.wgsl
rs/mygpu/src/: camera.rs  lib.rs  main.rs  texture.rs  vertex.rs
rs/mytcp/: Cargo.toml
rs/mytcp/src/: main.rs
rs/mytui/: Cargo.toml  README.txt
shaders/: gl.frag
vk/: Makefile  cmd.c  ctx.h  fence.c  ldev.c  mem.c  pdev.c  shader.c  shader.h
