[package]
name = "mygpu"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
# To compile WASM requires C shared library, thus cdylib is specified here.
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "mygpu_test"
path = "src/main.rs"

[dependencies]
# Anyhow shoudn't be result of WASM bindgen target.
anyhow = "1.0"
bytemuck = { version = "1.16", features = ["derive"] }
cgmath = "0.18"
# Disable multi-threading as WASM currently doesn't support it.
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
] }
log = "0.4"
log4rs = "1.3"
# tokio can't work in WASM environment.
# Use pollster for asynchronous operation instead.
pollster = "0.3"
wgpu = { version = "0.19", features = ["webgl"] }
winit = "0.29"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
